# OxiiLink

./: .gitignore  Cargo.toml  README.md
db/: IDENTITY  LOG  LOG.old.1668720897081366  LOG.old.1668720903885267  LOG.old.1668720962841134  LOG.old.1668721051962108  LOG.old.1668721071931162  LOG.old.1668721245805100  MANIFEST-000033  OPTIONS-000035
files/: EMBED.html  EMBED_PASTE.html  EMBED_SHORT.html  HELLO  HELLO.html  NOT_FOUND.html  WEB_ANALYTICS.html  WEB_PASTE.html  WEB_SHORT.html  analyzer.js  maintheme.css  paster.js  shortener.js  style.css
migrations/: 1-create.sql
src/: bot.rs  cli.rs  handlers_paste.rs  handlers_shorten.rs  id.rs  main.rs  state.rs  syntax.rs  util.rs
