[package]
name = "oxlink"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[dependencies]
tokio = { version = "1.21", features = ["full"] }
axum = "0.5"
# serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["full"] }
url ="2.2"
rand = "0.8"
base64 = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
rustc-hash = "1.1"
# clap = "4.0"
dashmap = "5.4"
tower_governor = "0.0.1"
lazy_static = "1.4"


[dependencies.rocksdb]
default-features = false
features = ["lz4", "multi-threaded-cf"]
version = "0.19"
