[package]
name = "oxii_link"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
criterion = "0.4"


[dependencies]
tokio = { version = "1.21", features = ["full"] }
axum = "0.5"
# serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["full"] }
url ="2.2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.7"
lazy_static = "1.4"
html2text = "0.4"
unicode-width = "0.1"
rkyv = { version = "0.7", features = ["archive_le", "validation"]}
chrono = {version="0.4", features = ["clock", "alloc"]}
memchr = "2.5"

[dependencies.syntect]
version = "5.0.0"
# default-features = false
features = ["default-syntaxes","default-themes","parsing", "html"]


[dependencies.rocksdb]
default-features = false
features = ["lz4", "multi-threaded-cf"]
version = "0.19"
